--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </head>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script>
     var socket = io();
  
