socket io module added

--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
 <body>
     <ul id="messages"></ul>
     <form action="">
-        <!-- <input id="m" autocomplete="off" /> -->
-        <button>投A</button>
+        <input id="m" autocomplete="off" />
         <button>投B</button>
     </form>
 </body>
